[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
rand = "0.8.5"
aes = "0.8.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "aes_ecb_hidden_message_discovery_simple"
harness = false

